# digital-certify

./: README.md  library.txt  readme.md  time_line.md
etc/desktop/: cfg_server.ini
src/desktop/client/: CMakeLists.txt  config.h.in
src/desktop/client/certify/: about_dialog.cpp  about_dialog.h  certify.cpp  certify.h  certify.qrc  certify.rc  create_project_dialog.cpp  create_project_dialog.h  infos_dialog.cpp  infos_dialog.h  main_window.cpp  main_window.h  project_dialog.cpp  project_dialog.h  project_list_dialog.cpp  project_list_dialog.h  project_list_item.h  project_list_item_delegate.cpp  project_list_item_delegate.h
src/desktop/client/global/: CMakeLists.txt  compile.h  define.h  global.cpp  global.h
src/desktop/client/langts/: CMakeLists.txt  certify_cn.ts
src/desktop/client/packer/: CMakeLists.txt  packer.cpp  packer.h  packer_.h  sysdbi_b.cpp  sysdbi_b.h  sysdbi_b_.h  tester.h
src/desktop/client/project/: CMakeLists.txt  project.cpp  project.h  project_.h
src/desktop/client/shares/: CMakeLists.txt  shares.cpp  shares.h
